sloved the overflowing issue

--- a/assets/CSS/about us page/about-us.css
+++ b/assets/CSS/about us page/about-us.css
@@ -1,12 +1,15 @@
+/* CORE */
+
 
 /* section 1 About US */
 
 .section-1-main-con {
     width: 100%;
-    height: 85vh;
+    height: 110vh;
     background-color: #01B18E;
     background-color: #ffffff;
-    margin: 6rem 0 0 0;
+    margin: 6.5rem 0 0 0;
+    padding: 5rem 0 0 0;
 }
 
 .section-1-main-con h1 {
