--- a/assets/CSS/common footer/footer-main.css
+++ b/assets/CSS/common footer/footer-main.css
@@ -1,8 +1,10 @@
+/* core */
+
 .footer-section {
     margin: 6rem 0 0 0;
     background-color: #164D92;
     width: 100%;
-    height: 65vh;
+    height: 55vh;
     padding: 3rem 0 0 0;
 }
 
