--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -10,33 +10,29 @@ header {
     height: 85vh;
     background-color: white;
     height: 565px;
-    left: 0px;
-    top: 0px;
     background: #F0ECF9;
     border-radius: 0px 0px 300px 0px;
+
+    flex-flow: row nowrap;
+    overflow: hidden;
+    flex-shrink: 0;
+
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 
 /* main con inside header */
-
-.main-curved-con {
-    width: 100%;
-    height: 100%;
-    background-color: rgb(240 236 249);
-    /* background-color: green; */
-    border-bottom-right-radius: 380px;
-}
+/* removed */
 
 /* navbar */
 
 .navbar {
-    margin: 3rem 0 0 0;
+    margin: 1rem 0 0 0;
     background-color: rgb(240 236 249);
-    /* background-color: blue; */
     width: 100%;
     height: 5rem;
-    position: absolute;
-    z-index: 2;
 }
 
 .navbar-brand {
@@ -60,11 +56,9 @@ header {
 
 
 .slider-content-1 {
-    position: absolute;
     width: 535px;
     height: 162px;
-    left: 110px;
-    top: 208px;
+    margin: 12rem 0 0 6.8rem;
     /* background-color: aqua; */
 }
 
@@ -74,7 +68,6 @@ header {
     font-weight: 500;
     font-size: 40px;
     line-height: 40px;
-    display: flex;
     align-items: center;
     letter-spacing: -0.015em;
     color: #164D92;
@@ -86,7 +79,6 @@ header {
     font-weight: 500;
     font-size: 24px;
     line-height: 10px;
-    display: flex;
     align-items: center;
     letter-spacing: -0.015em;
     color: #01B18E;
@@ -100,7 +92,6 @@ header {
     font-weight: 500;
     font-size: 15.5px;
     line-height: 20px;
-    display: flex;
     align-items: center;
     letter-spacing: -0.015em;
     margin: 3rem 0 0 0;
@@ -111,8 +102,7 @@ header {
     position: absolute;
     width: 157px;
     height: 32px;
-    left: 110px;
-    top: 426px;
+    margin: 4rem 0 0 6.6rem;
     background: #164D92;
     border: 1px solid #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -134,12 +124,9 @@ header {
 /* Star 1 */
 
 .svg-slider-1-star-con {
-    position: absolute;
     width: 656px;
     height: 529px;
-    left: 664px;
-    top: 145px;
-    overflow: hidden;
+    margin: 9.7rem 0 0 -2rem;
 }
 
 
@@ -498,5 +485,3 @@ header {
 }
 
 /* Section managing director & CEO END*/
-
-
